feat: update swagger docs
