# backend/api/token.go
@@ -24,15 +24,13 @@ type VerifyTokenRequest struct {
 }
 
 // reissueAccessToken godoc
-//
-//		@Summary		Reissue access token
-//		@Description	Reissue access token
-//		@Tags			user
-//		@Accept			json
-//		@Produce		json
-//		@Param			ReissueAccessTokenRequest	body		api.ReissueAccessTokenRequest	true	"refresh token"
-//		@Success		200		{object}	api.ReissueAccessTokenResponse
-//	 @Router       /reissueAccess [post]
+// @Summary		access token을 재발급 합니다.
+// @Tags		user
+// @Accept		json
+// @Produce		json
+// @Param		ReissueAccessTokenRequest	body		api.ReissueAccessTokenRequest	true	"refresh token"
+// @Success		200		{object}	api.ReissueAccessTokenResponse
+// @Router      /reissueAccess [post]
 func (s *Server) reissueAccessToken(c *fiber.Ctx) error {
 	r := new(ReissueAccessTokenRequest)
 	err := c.BodyParser(r)
@@ -94,15 +92,13 @@ func (s *Server) reissueAccessToken(c *fiber.Ctx) error {
 }
 
 // verifyToken godoc
-//
-//		@Summary		Reissue access token
-//		@Description	Reissue access token
-//		@Tags			user
-//		@Accept			json
-//		@Produce		json
-//		@Param			VerifyTokenRequest	body		api.VerifyTokenRequest	true	"access token"
-//		@Success		200		{object}	api.UserResponse
-//	 @Router       /verifyToken [post]
+// @Summary		발급했던 access token을 검증합니다.
+// @Tags		user
+// @Accept		json
+// @Produce		json
+// @Param		VerifyTokenRequest	body		api.VerifyTokenRequest	true	"access token"
+// @Success		200		{object}	api.UserResponse
+// @Router      /verifyToken [post]
 func (s *Server) verifyToken(c *fiber.Ctx) error {
 	r := new(VerifyTokenRequest)
 	err := c.BodyParser(r)
