# frontend/server/docs/swagger.json
@@ -16,20 +16,59 @@
     "host": "api.bitmoi.co.kr",
     "basePath": "/",
     "paths": {
+        "/bidToken": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "erc20"
+                ],
+                "summary": "광고 스팟에 MOI 토큰을 입찰합니다.",
+                "parameters": [
+                    {
+                        "description": "입찰 금액과 광고 스팟",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.BidTokenRequest"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.ScoreResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/competition": {
             "get": {
-                "description": "Get encrypted chart for competition",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "chart"
                 ],
-                "summary": "Get competition chart",
+                "summary": "경쟁모드에서 제공할 차트를 불러옵니다.",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Comma-separated list of pair names",
+                        "description": "제외할 USDT페어들을 쉼표로 구분하여 전달합니다.",
                         "name": "names",
                         "in": "query"
                     },
@@ -51,7 +90,6 @@
                 }
             },
             "post": {
-                "description": "Post score of competition mode",
                 "consumes": [
                     "application/json"
                 ],
@@ -61,10 +99,10 @@
                 "tags": [
                     "score"
                 ],
-                "summary": "Post score",
+                "summary": "경쟁모드에서 작성한 주문을 제출합니다.",
                 "parameters": [
                     {
-                        "description": "order inforamtion",
+                        "description": "주문 정보",
                         "name": "order",
                         "in": "body",
                         "required": true,
@@ -92,7 +130,6 @@
         },
         "/freeToken": {
             "post": {
-                "description": "request for free token",
                 "consumes": [
                     "application/json"
                 ],
@@ -102,10 +139,10 @@
                 "tags": [
                     "erc20"
                 ],
-                "summary": "Post sendFreeErc20",
+                "summary": "프리 MOI 토큰을 지급합니다.",
                 "parameters": [
                     {
-                        "description": "eth address",
+                        "description": "metamask 주소",
                         "name": "MetamaskAddressRequest",
                         "in": "body",
                         "required": true,
@@ -131,16 +168,40 @@
                 }
             }
         },
+        "/highestBidder": {
+            "get": {
+                "tags": [
+                    "erc20"
+                ],
+                "summary": "특정 광고 스팟에 가장 높은 가격을 제시한 입찰자를 반환합니다.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "광고 스팟",
+                        "name": "location",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "최상위 입찰자",
+                        "schema": {
+                            "$ref": "#/definitions/api.HighestBidderResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/interval": {
             "get": {
-                "description": "Get another interval chart for both of practice and competition",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "chart"
                 ],
-                "summary": "Get another interval chart",
+                "summary": "다른 시간단위의 차트를 불러옵니다. 연습, 경쟁 두 모드 모두 지원합니다.",
                 "parameters": [
                     {
                         "type": "string",
@@ -198,14 +259,13 @@
         },
         "/moreinfo": {
             "get": {
-                "description": "Get more infomation of rank",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "rank"
                 ],
-                "summary": "Get moreInfo",
+                "summary": "사용자가 랭크에 등재하며 기입한 추가 정보를 불러옵니다.",
                 "parameters": [
                     {
                         "type": "string",
@@ -235,18 +295,17 @@
         },
         "/myscore/{page}": {
             "get": {
-                "description": "Get history of my score",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "score"
                 ],
-                "summary": "Get myscore",
+                "summary": "사용자의 경쟁모드 주문 채결 내역을 불러옵니다.",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "page number",
+                        "description": "페이지 번호",
                         "name": "page",
                         "in": "path",
                         "required": true
@@ -274,14 +333,13 @@
         },
         "/nextBidUnlock": {
             "get": {
-                "description": "Get next date of unlock ad bidding",
                 "tags": [
                     "erc20"
                 ],
-                "summary": "Get next unlock date",
+                "summary": "경매 마감 일자를 제공합니다.",
                 "responses": {
                     "200": {
-                        "description": "unix timestamp",
+                        "description": "포멧된 일자",
                         "schema": {
                             "$ref": "#/definitions/api.NextUnlockResponse"
                         }
@@ -291,18 +349,17 @@
         },
         "/practice": {
             "get": {
-                "description": "Get non encrypted chart for practice",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "chart"
                 ],
-                "summary": "Get practice chart",
+                "summary": "연습모드에서 제공할 차트를 불러옵니다.",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Comma-separated list of pair names",
+                        "description": "제외할 USDT페어들을 쉼표로 구분하여 전달합니다.",
                         "name": "names",
                         "in": "query"
                     }
@@ -317,7 +374,6 @@
                 }
             },
             "post": {
-                "description": "Post score of practice mode",
                 "consumes": [
                     "application/json"
                 ],
@@ -327,10 +383,10 @@
                 "tags": [
                     "score"
                 ],
-                "summary": "Post score",
+                "summary": "연습모드에서 작성한 주문을 제출합니다.",
                 "parameters": [
                     {
-                        "description": "order inforamtion",
+                        "description": "주문 정보",
                         "name": "order",
                         "in": "body",
                         "required": true,
@@ -351,17 +407,16 @@
         },
         "/rank": {
             "post": {
-                "description": "Post rank to ranking chart",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "rank"
                 ],
-                "summary": "Post rank",
+                "summary": "사용자를 랭크에 등재합니다.",
                 "parameters": [
                     {
-                        "description": "socre id and comment",
+                        "description": "랭크 등재 요청에 대한 정보",
                         "name": "rankInsertRequest",
                         "in": "body",
                         "required": true,
@@ -386,18 +441,17 @@
         },
         "/rank/{page}": {
             "get": {
-                "description": "Get ranking chart",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "rank"
                 ],
-                "summary": "Get rank",
+                "summary": "랭크에 등재된 사용자들을 불러옵니다.",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Page number",
+                        "description": "페이지 번호",
                         "name": "page",
                         "in": "path",
                         "required": true
@@ -418,7 +472,6 @@
         },
         "/reissueAccess": {
             "post": {
-                "description": "Reissue access token",
                 "consumes": [
                     "application/json"
                 ],
@@ -428,7 +481,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Reissue access token",
+                "summary": "access token을 재발급 합니다.",
                 "parameters": [
                     {
                         "description": "refresh token",
@@ -450,9 +503,33 @@
                 }
             }
         },
+        "/selectedBidder": {
+            "get": {
+                "tags": [
+                    "erc20"
+                ],
+                "summary": "특정 광고 스팟의 입찰에 성공한 사용자를 불러옵니다.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "광고 스팟",
+                        "name": "location",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "사용자와 입찰금액",
+                        "schema": {
+                            "$ref": "#/definitions/api.HighestBidderResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/user": {
             "post": {
-                "description": "Create user api",
                 "consumes": [
                     "application/json"
                 ],
@@ -462,10 +539,10 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Create user",
+                "summary": "사용자를 생성합니다.",
                 "parameters": [
                     {
-                        "description": "request contains id,pw,nickname,email ...",
+                        "description": "유저 생성 요청에 필요한 정보",
                         "name": "CreateUserRequest",
                         "in": "body",
                         "required": true,
@@ -483,7 +560,6 @@
         },
         "/user/address": {
             "post": {
-                "description": "Update metamask address api",
                 "consumes": [
                     "application/json"
                 ],
@@ -493,10 +569,10 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Update metamask address",
+                "summary": "사용자의 Metamask 계좌를 업데이트 합니다.",
                 "parameters": [
                     {
-                        "description": "request contains metamask address",
+                        "description": "Metamask 주소",
                         "name": "LoginUserRequest",
                         "in": "body",
                         "required": true,
@@ -521,18 +597,17 @@
         },
         "/user/checkId": {
             "get": {
-                "description": "Check ID duplication",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "user"
                 ],
-                "summary": "Check ID",
+                "summary": "ID 중복 여부를 확인합니다.",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "user id",
+                        "description": "체크할 ID",
                         "name": "user_id",
                         "in": "query",
                         "required": true
@@ -547,18 +622,17 @@
         },
         "/user/checkNickname": {
             "get": {
-                "description": "Check nickname duplication",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "user"
                 ],
-                "summary": "Check nickname",
+                "summary": "닉네임 중복 여부를 확인합니다.",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "nickname",
+                        "description": "체크할 닉네임",
                         "name": "nickname",
                         "in": "query",
                         "required": true
@@ -573,7 +647,6 @@
         },
         "/user/login": {
             "post": {
-                "description": "Login user api",
                 "consumes": [
                     "application/json"
                 ],
@@ -583,10 +656,10 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Login user",
+                "summary": "사용자의 ID와 PW를 확인하여 토큰을 발급합니다.",
                 "parameters": [
                     {
-                        "description": "request contains id and pw",
+                        "description": "ID와 PW",
                         "name": "LoginUserRequest",
                         "in": "body",
                         "required": true,
@@ -607,7 +680,6 @@
         },
         "/user/profile": {
             "post": {
-                "description": "Update profile image api",
                 "consumes": [
                     "application/json"
                 ],
@@ -617,7 +689,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Update profile image",
+                "summary": "사용자의 프로필 이미지를 업데이트 합니다.",
                 "parameters": [
                     {
                         "type": "file",
@@ -669,7 +741,6 @@
         },
         "/verifyToken": {
             "post": {
-                "description": "Reissue access token",
                 "consumes": [
                     "application/json"
                 ],
@@ -679,7 +750,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Reissue access token",
+                "summary": "발급했던 access token을 검증합니다.",
                 "parameters": [
                     {
                         "description": "access token",
@@ -703,6 +774,27 @@
         }
     },
     "definitions": {
+        "api.BidTokenRequest": {
+            "type": "object",
+            "required": [
+                "amount",
+                "location"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "integer",
+                    "minimum": 1
+                },
+                "location": {
+                    "type": "string",
+                    "enum": [
+                        "practice",
+                        "rank",
+                        "freetoken"
+                    ]
+                }
+            }
+        },
         "api.CandleData": {
             "type": "object",
             "properties": {
@@ -748,6 +840,17 @@
                     "type": "string",
                     "maxLength": 15,
                     "minLength": 5
+                }
+            }
+        },
+        "api.HighestBidderResponse": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "string"
                 }
             }
         },
@@ -807,7 +910,7 @@
             "type": "object",
             "properties": {
                 "next_unlock": {
-                    "type": "integer"
+                    "type": "string"
                 }
             }
         },
@@ -1025,6 +1128,9 @@
                     "type": "string"
                 },
                 "email": {
+                    "type": "string"
+                },
+                "metamask_address": {
                     "type": "string"
                 },
                 "nickname": {
